--- a/src/app.html
+++ b/src/app.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" class="bg-slate-950 text-white relative">
+  <body data-sveltekit-preload-data="hover" class="bg-slate-950 text-black relative">
     <div style="display: contents" >%sveltekit.body%</div>
   </body>
 </html>
