--- a/src/app.html
+++ b/src/app.html
@@ -15,6 +15,6 @@
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover" class="bg-slate-950 text-black relative">
-    <div style="display: contents" >%sveltekit.body%</div>
+    <div style="display: contents" class="relative z-[1]">%sveltekit.body%</div>
   </body>
 </html>
