--- a/src/app.html
+++ b/src/app.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" class="bg-stone-950 text-yellow-100 relative">
+  <body data-sveltekit-preload-data="hover" class="bg-black text-yellow-100 relative">
     <div style="display: contents" class="relative z-[1]">%sveltekit.body%</div>
   </body>
 </html>
